fix games align center

--- a/style.scss
+++ b/style.scss
@@ -67,6 +67,7 @@ body {
     padding-bottom: 128px;
     background: #000915;
     display: flex;
+    justify-content: center;
     gap: 32px;
 
     &__block {
